--- a/package.json
+++ b/package.json
@@ -29,14 +29,16 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "@types/jquery": "^3.5.1",
     "bootstrap": "^4.5.2",
     "core-js": "^2.4.1",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
     "ngx-bootstrap": "^6.1.0",
     "path": "^0.12.7",
     "rxjs": "^6.3.3",
-    "rxjs-compat": "^6.6.2",
+    "rxjs-compat": "^6.6.3",
     "zone.js": "^0.8.14"
   },
   "peerDependencies": {
